[FIXED] Wrong padding to LG
Section of the pages and inner box at the LG breakpoint.

--- a/src/assets/style/contact.css
+++ b/src/assets/style/contact.css
@@ -99,6 +99,13 @@
   }
 }
 
+/*LG - large tablet landscape*/
+@media all and (min-width: 1200px) {
+  section.contact {
+    margin: 2rem 0 1rem;
+  }
+}
+
 /*XL larger screens*/
 @media all and (min-width: 1440px) {
   section.contact {
